Fixed overflow direction

--- a/frontends/web/src/containers/TaskPage.css
+++ b/frontends/web/src/containers/TaskPage.css
@@ -5,5 +5,5 @@
  */
 
 .leaderboard-container {
-  overflow-y: scroll;
+  overflow-x: scroll;
 }
